--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^4.2.1",
     "date-fns": "^2.28.0",
     "flowbite-datepicker": "^1.2.1",
     "vue": "^2",
