--- a/src/assets/compiled/mix-manifest.json
+++ b/src/assets/compiled/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/activity-log.js": "/activity-log.js",
+    "/activity-log-stats.js": "/activity-log-stats.js",
     "/activity-log.min.js": "/activity-log.min.js",
-    "/activity-log.min.css": "/activity-log.min.css"
+    "/activity-log.min.css": "/activity-log.min.css",
+    "/activity-log-stats.min.js": "/activity-log-stats.min.js"
 }
